Fixed content and logo alignment for default template layouts, logo if statement if no logo is uploaded, and added langswitcher code to mobilemenu as well. fixes #13

--- a/css/bones.css
+++ b/css/bones.css
@@ -28,7 +28,7 @@ ol {
 
 /* BEGIN SmartGravity HEADER */
 .sg-default-layout {
-  padding: 2.5rem 0.9375rem 3.5rem; }
+  padding: 2.5rem 0 3.5rem; }
 
 #error {
   margin: 2.5rem auto 3.5rem;
@@ -39,7 +39,8 @@ ol {
   border-bottom: 1px solid; }
   #header #logo {
     float: left;
-    padding: 0; }
+    padding: 0;
+    margin-right: 0.5rem; }
     #header #logo img {
       float: left;
       width: 48px;
@@ -48,7 +49,7 @@ ol {
     text-decoration: none;
     letter-spacing: 0;
     line-height: 48px;
-    margin: 6px;
+    margin: 6px 6px 6px 0;
     padding: 0;
     float: left; }
 
