--- a/scss/bones/_bones.scss
+++ b/scss/bones/_bones.scss
@@ -6,7 +6,7 @@
 
 /* BEGIN SmartGravity HEADER */
 .sg-default-layout {
-  padding: 2.5rem 0.9375rem 3.5rem;
+  padding: 2.5rem 0 3.5rem;
 }
 #error {
   margin: 2.5rem auto 3.5rem;
@@ -18,6 +18,7 @@
   #logo {
     float: left;
     padding: 0;
+    margin-right: 0.5rem;
     img {
       float: left;
       width: 48px;
@@ -28,7 +29,7 @@
     text-decoration: none;
     letter-spacing: 0;
     line-height: 48px;
-    margin: 6px;
+    margin: 6px 6px 6px 0;
     padding: 0;
     float: left;
   }
